# StatAssembly

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
example_files/: CHM13v2.0.bam.csi  CHM13v2.0geneloc.csv  CHM13v2.0loc.csv  assembly.py  download.sh  ferretgloballoc.csv  ferretloc.csv
example_files/results/: human_IGH_NC_060938.1-primary_geneanalysis.csv  human_TRB_NC_060931.1-primary_allele_confidence.csv  human_TRB_NC_060931.1-primary_break.txt  human_TRB_NC_060931.1-primary_geneanalysis.csv
src/: main.rs  struct.rs
