[package]
name = "IMGT_StatAssembly"
description = "Assess quality of assemblies on IG and TR loci"
version = "0.1.0"
edition = "2021"
authors = ["Guilhem Zeitoun <guilhem.zeitoun@cnrs.fr>"]
rust-version = "1.81"
license-file = "LICENSE.txt"
keywords = ["immunogenetics", "reads", "assembly quality"]
publish = false
categories = ["science::bioinformatics::sequence-analysis"]
[dependencies]
bio-types = "1.0.4"
bzip2-sys = { version = "0.1.11", features = ["static"] }
clap = { version = "4.5.24", features = ["derive", "cargo"] }
csv = "1.3.1"
itertools = "0.14.0"
#noodles-core = "0.15.0"
#noodles-fasta = "0.46.0"
num-format = "0.4.4"
openssl-sys = { version = "0.9.104", features = ["vendored"] }
ordered-float = "4.6.0"
plotters = { version = "0.3.7", features = ["all_series","bitmap_backend"] }
ranges = "0.4.0"
rust-htslib = { git = "ssh://git@github.com/DorianCoding/bamanalysis.git", branch="master", features = ["bzip2","curl","lzma","static"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
[lints.rust]
unsafe_code = "deny"
