[package]
name = "IMGT_StatAssembly"
description = "Assess quality of assemblies and allele confidence on IG and TR loci"
version = "0.1.8"
edition = "2024"
authors = ["Guilhem Zeitoun <guilhem.zeitoun@cnrs.fr>"]
rust-version = "1.85"
license-file = "LICENSE.txt"
keywords = ["immunogenetics", "reads", "assembly quality"]
publish = false
categories = ["science::bioinformatics::sequence-analysis"]
[dependencies]
bio-types = "1.0.4"
bzip2-sys = { version = "0.1.13", features = ["static"] }
clap = { version = "4.5.38", features = ["derive", "cargo"] }
csv = "1.3.1"
itertools = "0.14.0"
#noodles-core = "0.15.0"
#noodles-fasta = "0.46.0"
num-format = "0.4.4"
openssl-sys = { version = "0.9.108", features = ["vendored"] }
ordered-float = "5.0.0"
plotters = { version = "0.3.7", features = ["all_series","bitmap_backend"] }
ranges = "0.4.0"
#extended-htslib = { version = "*", features = ["bzip2","curl","lzma","static"] }
extended-htslib = { version = "*", features = ["bzip2","curl","lzma","static"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
lazy_static = "1.5.0"
regex = "1.11.1"
[lints.rust]
unsafe_code = "deny"
